--- a/lib/etc/code/fortran/templates/template_static.jinja
+++ b/lib/etc/code/fortran/templates/template_static.jinja
@@ -9,4 +9,4 @@
 void debug_printer(const char *, ...); 
 #include "helper.h"                                                                                      
 #include "wrapper_f.h"
-extern __thread int in_w = 0;                                                                                   
+extern __thread int in_w;
