--- a/lib/etc/code/fortran/templates/out_function.jinja
+++ b/lib/etc/code/fortran/templates/out_function.jinja
@@ -5,7 +5,7 @@
             {%- if map['assign']|default("") != "" -%} 
                 {%- if map['arg_dep']|default("") != "" -%} 
                     int i{{idx}};
-                    for (i{{idx}}=0;i{{idx}}<{{map['arg_dep']}};i{{idx}}++) {
+                    for (i{{idx}}=0;i{{idx}}<*{{map['arg_dep']}};i{{idx}}++) {
                         {{ arg['var']|replace('[]','') }}[i{{idx}}]=(A_{{map['type']|replace('*','')}}){{ arg['var']|replace('[]','') }}_tmp[i{{idx}}];
                     }
                 {%- else-%} 
@@ -27,42 +27,46 @@
                         {
                             {%- if arg['if_dep']|default("") != "" -%} 
                                 int i{{idx}};
+                                {%- if arg['if_dep'] != "*outcount" -%}
+                                for(i{{idx}} = 0; i{{idx}} < *{{arg['if_dep']}}; i{{idx}}++) {
+                                {%- else -%}
                                 for(i{{idx}} = 0; i{{idx}} < {{arg['if_dep']}}; i{{idx}}++) {
+                                {%- endif -%}
                                     {%- if arg['if_null_dep']|default("") != ""-%}  
                                         if({{arg['var']|replace('[]','')}}_tmp[{{arg['if_null_dep']|replace('[]','')}}[i{{idx}}]]=={{arg['if_null']}}) {
-                                            {{arg['del']}}(&{{arg['var']|replace('[]','')}}[{{arg['if_null_dep']|replace('[]','')}}[i{{idx}}]],&{{arg['var']|replace('[]','')}}_tmp[{{arg['if_null_dep']|replace('[]','')}}[i{{idx}}]]);
+                                            {{arg['del_f']}}(&{{arg['var']|replace('[]','')}}[{{arg['if_null_dep']|replace('[]','')}}[i{{idx}}]],&{{arg['var']|replace('[]','')}}_tmp[{{arg['if_null_dep']|replace('[]','')}}[i{{idx}}]]);
                                         }
                                     {%- else -%} 
                                         if( {{arg['var']|replace('[]','')}}_tmp[i{{idx}}] == {{arg['if_null']}} ) {
-                                            {{arg['del']}}(&{{arg['var']|replace('[]','')}}[i{{idx}}],&{{arg['var']|replace('[]','')}}_tmp[i{{idx}}]);
+                                            {{arg['del_f']}}(&{{arg['var']|replace('[]','')}}[i{{idx}}],&{{arg['var']|replace('[]','')}}_tmp[i{{idx}}]);
                                         }
                                     {%- endif -%} 
                                 }
                             {%- else-%} 
                                 {%- if arg['if_null_dep']|default("") != "" -%} 
                                 if({{arg['var']|replace('[]','')}}_tmp[*{{arg['if_null_dep']}}] == {{arg['if_null']}}){
-                                    {{arg['del']}}(&{{arg['var']|replace('[]','')}}[*{{arg['if_null_dep']}}],&{{arg['var']|replace('[]','')}}_tmp[*{{arg['if_null_dep']}}]);
+                                    {{arg['del_f']}}(&{{arg['var']|replace('[]','')}}[*{{arg['if_null_dep']}}],&{{arg['var']|replace('[]','')}}_tmp[*{{arg['if_null_dep']}}]);
                                 }
                                 {%- else-%} 
                                     if(*{{arg['var']}}_tmp == {{arg['if_null']}}) {
-                                        {{arg['del']}}(&{{arg['var']}},&{{arg['var']}}_tmp);
+                                        {{arg['del_f']}}({{arg['var']}},{{arg['var']}}_tmp);
                                     }
                                 {%- endif-%} 
                             {%- endif-%} 
                         }       
                     {%- else-%} 
-                        {%- if arg['del']|default("") != ""-%} 
+                        {%- if arg['del_f']|default("") != ""-%} 
                             {%- if  arg['del2']|default("") != ""-%} 
-                                {{arg['del']}}(&{{arg['var']}},&{{arg['var']}}_tmp);
+                                {{arg['del_f']}}(&{{arg['var']}},&{{arg['var']}}_tmp);
                                 {{arg['del2']}}(&{{arg['var']}},&{{arg['var']}}_tmp);
                             {%- else-%}  
-                                {%- if arg['del'] == 'errhandler_del'-%} 
-                                    {{arg['del']}}({{arg['var']}},{{arg['var']}}_tmp);
-                                {%- elif arg['del'] == 'communicator_translation_del(comm)'-%} 
+                                {%- if arg['del_f'] == 'errhandler_del'-%} 
+                                    {{arg['del_f']}}({{arg['var']}},{{arg['var']}}_tmp);
+                                {%- elif arg['del_f'] == 'communicator_translation_del(comm)'-%} 
                                     comm_conv_r2a(comm,comm_tmp);
-                                    {{arg['del']}};
+                                    {{arg['del_f']}};
                                 {%- else-%} 
-                                    {{arg['del']}}(&{{arg['var']}},&{{arg['var']}}_tmp);
+                                    {{arg['del_f']}}(&{{arg['var']}},&{{arg['var']}}_tmp);
                                 {%- endif-%} 
                             {%- endif-%}  
                         {%- else-%}  
@@ -73,7 +77,7 @@
                             {%- elif name_func == "MPI_Errhandler_get"-%} 
                                 errhandler_translation_get_key_from_value(*errhandler_tmp,errhandler);
                             {%- else-%} 
-                                {{map['r2a']}}(&{{arg['var']}},&{{arg['var']}}_tmp);
+                                {{map['r2a']}}({{arg['var']}},{{arg['var']}}_tmp);
                             {%- endif-%} 
                         {%- endif-%}     
                     {%- endif-%}
@@ -84,16 +88,21 @@
                     {%else-%} 
                         int i{{idx}};
                         {%- if arg['if_status_ignore']|default("") != "" -%} 
-                            if (array_of_statuses!=A_MPI_STATUSES_IGNORE) 
+                            if (array_of_statuses!=A_f_MPI_STATUSES_IGNORE) 
                         {%- endif-%} 
                             {
+                                /*coucou*/
+                                {%- if arg['arg_dep'] != "*outcount" -%}
+                                for (i{{idx}}=0;i{{idx}}<*{{arg['arg_dep']}};i{{idx}}++) { 
+                                {%- else -%}
                                 for (i{{idx}}=0;i{{idx}}<{{arg['arg_dep']}};i{{idx}}++) { 
+                                {%- endif -%}
                                     {{map['r2a']}}(&{{arg['var']|replace('[]','')}}[i{{idx}}],&{{arg['var']|replace('[]','')}}_tmp[i{{idx}}]);
                                 }
                             }
                     {%- endif-%} 
-            {%- elif arg['if_err']|default("") != ""-%} 
-                if({{arg['if_err']}}){
+            {%- elif arg['if_err_f']|default("") != ""-%} 
+                if({{arg['if_err_f']}}){
                     {%- if  name_func == 'MPI_Comm_set_errhandler'-%} 
                         int* ptr_errhandler_func;
                     {%- elif name_func == 'MPI_Errhandler_set'-%} 
@@ -103,7 +112,7 @@
                     communicator_fn_translation_update(comm, ptr_errhandler_func);
                 }        
             {%- else-%} 
-                {%-  if not '*' in map['type'][-1:]  or map['addr_change'] == "True"  -%} 
+                {%-  if arg['name'] == 'weight_mapper'   -%} 
                     {{map['r2a']}}(&{{arg['var']|replace('[]','')}},&{{arg['var']|replace('[]','')}}_tmp);
                 {%-  else -%} 
                     {{map['r2a']}}({{arg['var']|replace('[]','')}},{{arg['var']|replace('[]','')}}_tmp);
