--- a/lib/etc/code/fortran/templates/template_static.jinja
+++ b/lib/etc/code/fortran/templates/template_static.jinja
@@ -7,6 +7,7 @@
 #include <stdlib.h>
 #define debug_printer debug_printer_f
 void debug_printer(const char *, ...); 
+#define __mpi_interface_removed__(a,b) /* __mpi_interface_removed__(a,b) */
 #include "helper.h"                                                                                      
 #include "wrapper_f.h"
 extern __thread int in_w;
