--- a/lib/etc/code/C/templates/template_static.jinja
+++ b/lib/etc/code/C/templates/template_static.jinja
@@ -4,6 +4,7 @@
 #endif                                 
 #include <dlfcn.h>                     
 #include <stdio.h>                     
+#define __mpi_interface_removed__(a,b) /*__mpi_interface_removed__(a,b)/*
 /*ompi constante*/                     
 int WI4MPI_errhandler_key;             
 void debug_printer(const char *, ...); 
