--- a/lib/etc/code/C/templates/template_A.jinja
+++ b/lib/etc/code/C/templates/template_A.jinja
@@ -7,13 +7,13 @@
 {% if  conf[func['name']] is defined and  conf[func['name']]['Application'] is defined and conf[func['name']]['Application']['C'] is defined and conf[func['name']]['Application']['C']['generated'] == "False" -%}
  {%-  if conf[func['name']]['Application']['C']['file'] is defined -%}
     {{decl_ext}} {{ ret_type }} {{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1-%}  , {%-  endif-%} {%if arg["variadic"]== "True" %} ... {%else %}{{ arg["var"]|typevar(type_prefix('A_',mappers[arg['name']]['type'])) }} {%endif %}{%-  endfor-%} );
-    {{ ret_run_type }} (*LOCAL_{{func['name']}})({%-  for arg in func['args']-%}{%-  if loop.index > 1-%}  , {%-  endif-%} {%if arg["variadic"]== "True" %} ... {%else %}{{arg["var"]|typevar(type_prefix('R_',mappers[arg['name']]['type'])) }} {%endif%}{%-  endfor-%} );
+    {{ ret_run_type }} (*LOCAL_{{func['name']}})({%-  for arg in func['args']-%}{%-  if loop.index > 1-%}  , {%-  endif-%} {%if arg["variadic"]== "True" %} ... {%else %}{{type_prefix('R_',mappers[arg['name']]['type']) }} {{arg['var']}} {%endif%}{%-  endfor-%} );
 #define __{{func['name']}}__GEN__
     {%  include conf[func['name']]['Application']['C']['file']-%} 
  {% endif %}
 {%  else-%} 
      {{decl_ext}} {{ ret_type }} {{func['name']}}({%-  for arg in func['args']-%} {%-  if loop.index > 1-%}  , {%-  endif-%}  {%if arg["variadic"]== "True" %} ... {%else %}{{ type_prefix('A_',mappers[arg['name']]['type'])}} {{ arg["var"] }} {%endif %}{%-  endfor-%} );
-    {{ ret_run_type }} (*LOCAL_{{func['name']}})({%-  for arg in func['args']-%}{%-  if loop.index > 1-%}  , {%-  endif-%}  {%if arg["variadic"]== "True" %} ... {%else %} {{ arg["var"]|typevar(type_prefix('R_',mappers[arg['name']]['type'])) }} {%endif%} {%-  endfor-%} );
+    {{ ret_run_type }} (*LOCAL_{{func['name']}})({%-  for arg in func['args']-%}{%-  if loop.index > 1-%}  , {%-  endif-%}  {%if arg["variadic"]== "True" %} ... {%else %} {{ type_prefix('R_',mappers[arg['name']]['type']) }} {{arg['var']}} {%endif%} {%-  endfor-%} );
 #define __{{func['name']}}__GEN__
 #ifndef A_{{func['name']}}
 #ifndef {{func['name']|upper}}_OVERRIDE
@@ -52,7 +52,7 @@
         {% endif %}
     {%-  endfor %} 
 
-    {{ret_run_type}} ret_tmp=LOCAL_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1-%}  , {%-  endif-%}     {%-  if  mappers[arg['name']]['no_map'] is not defined and  mappers[arg['name']]['wrap'] is not defined  and  mappers[arg['name']]['set'] is not defined-%} {{ arg['var']|replace([],'') }}_tmp {%- else -%}   {{ arg['var'].split('[')|first }} {%- endif -%}  {%-  endfor-%} );
+    {{ret_run_type}} ret_tmp=LOCAL_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1-%}  , {%-  endif-%}     {%-  if  mappers[arg['name']]['no_map'] is not defined and  mappers[arg['name']]['wrap'] is not defined  and  mappers[arg['name']]['set'] is not defined-%} {{ arg['var'].split('[')|first }}_tmp {%- else -%}   {{ arg['var'].split('[')|first }} {%- endif -%}  {%-  endfor-%} );
 
     {%  for arg in func['args'] -%} 
         {%- if arg['Out'] == 1 and arg['arg_dep'] != ''-%} 
@@ -80,7 +80,7 @@
     #ifdef DEBUG
         if (WI4{{func['name']}}_print)
             debug_printer(
-                "{{func['name']}} :\n{\n{%-  for arg in func['args']-%} {%-  if mappers[arg['name']]['debug_type'] is defined-%} {{arg['var']|replace('[]','') }} : {{mappers[arg['name']]['debug_type']}},\n{%- endif-%} {%- endfor%}error/return : {{mappers[func['ret']['name']]['debug_type']}}\n}\n",{%-  for arg in func['args']-%} {%-  if mappers[arg['name']]['debug_type'] is defined-%} {{arg['var']|replace('[]','') }},{%- endif -%}  {%- endfor -%}ret);
+                "{{func['name']}} :\n{\n{%-  for arg in func['args']-%} {%-  if mappers[arg['name']]['debug_type'] is defined-%} {{arg['var']|replace('[]','') }} : {{mappers[arg['name']]['debug_type']}},\n{%- endif-%} {%- endfor%}error/return : {{mappers[func['ret']['name']]['debug_type']}}\n}\n",{%-  for arg in func['args']-%} {%-  if mappers[arg['name']]['debug_type'] is defined-%} {{arg['var'].split('[')|first}},{%- endif -%}  {%- endfor -%}ret);
     #endif
     #ifdef TIMEOUT_SUPPORT
         wi4mpi_unset_timeout();
