--- a/lib/etc/code/C/templates/template_dlsym.jinja
+++ b/lib/etc/code/C/templates/template_dlsym.jinja
@@ -16,6 +16,27 @@ void *lib_handle_io = dlopen(getenv("WI4MPI_RUN_MPIIO_C_LIB"), RTLD_NOW | RTLD_G
              {{type['name']}}_translation_add_const(A_{{const}},R_{{const}});
         {%- endfor -%}
     {%- endfor -%} 
+#if defined(intel_intel) || defined(intel_ompi) || defined(ompi_intel) ||      \
+    defined(_intel) || defined(_mpc)
+  local_mpir_dup_fn = dlsym(lib_handle, "mpir_dup_fn");
+#endif
+#if defined(intel_intel) || defined(intel_ompi) || defined(ompi_intel) ||      \
+    defined(_intel)
+  ptr_mpifcmb5_ = dlsym(lib_handle, "mpifcmb5_");
+  ptr_mpifcmb9_ = dlsym(lib_handle, "mpifcmb9_");
+  ptr_mpipriv1_ = dlsym(lib_handle, "mpipriv1_");
+  ptr_mpipriv2_ = dlsym(lib_handle, "mpipriv2_");
+  ptr_mpiprivc_ = dlsym(lib_handle, "mpiprivc_");
+#endif
+#if defined(ompi_ompi) || defined(_ompi)
+  init_global(lib_handle);
+#elif defined(ompi_intel) || defined(_intel)
+  r_mpi_unweighted = dlsym(lib_handle, "mpi_unweighted");
+  r_mpi_weights_empty = dlsym(lib_handle, "mpi_weights_empty");
+  mpi_unweighted = dlsym(lib_handle, "mpi_unweighted");
+  mpi_weights_empty = dlsym(lib_handle, "mpi_weights_empty");
+#endif
+
   wrapper_init_f();
   init_f2c(lib_handle);
   WI4MPI_errhandler_key = R_MPI_KEYVAL_INVALID;
