--- a/lib/etc/code/C/templates/template_dlsym.jinja
+++ b/lib/etc/code/C/templates/template_dlsym.jinja
@@ -20,7 +20,7 @@ void *lib_handle_io = dlopen(getenv("WI4MPI_RUN_MPIIO_C_LIB"), RTLD_NOW | RTLD_G
 
 #if defined(INTEL_INTEL)||defined(INTEL_OMPI)||defined(OMPI_INTEL)||defined(_INTEL)||defined(_MPC)
 
-  local_mpir_dup_fn = dlsym(lib_handle, "mpir_dup_fn");
+  local_MPIR_dup_fn = dlsym(lib_handle, "mpir_dup_fn");
 
 #endif
 #if defined(INTEL_INTEL) || defined(INTEL_OMPI) || defined(OMPI_INTEL) || \
@@ -36,12 +36,6 @@ void *lib_handle_io = dlopen(getenv("WI4MPI_RUN_MPIIO_C_LIB"), RTLD_NOW | RTLD_G
 
   init_global(lib_handle);
 
-#elif defined(OMPI_INTEL) || defined(_INTEL)
-
-  r_mpi_unweighted = dlsym(lib_handle, "mpi_unweighted");
-  r_mpi_weights_empty = dlsym(lib_handle, "mpi_weights_empty");
-  mpi_unweighted = dlsym(lib_handle, "mpi_unweighted");
-  mpi_weights_empty = dlsym(lib_handle, "mpi_weights_empty");
 #endif
 
 #if defined(INTEL_INTEL) || defined(OMPI_INTEL) || defined(_INTEL)
