fix generation of some functions

--- a/lib/etc/code/C/templates/out_function.jinja
+++ b/lib/etc/code/C/templates/out_function.jinja
@@ -10,7 +10,7 @@
                     }
                 {%- else-%} 
                     {%- if map['type'][-1] == '*'-%}  
-                        *{{ arg['var']|replace('[]','') }}=(A_{{map['type']|replace('*','')}}){{ arg['var']|replace('[]','') }}_tmp;
+                        *{{ arg['var']|replace('[]','') }}=(A_{{map['type']|replace('*','')}}){{ arg['var']|replace('[]','') }}_ltmp;
                     {%- else-%} 
                         {{ arg['var']|replace('[]','') }}=(A_{{map['type']|replace('*','')}}){{ arg['var']|replace('[]','') }}_tmp;
                     {%- endif-%} 
